@@ -1,3 +1,9 @@
+2007-10-03 [colin]	1.98.0cvs9
+
+	* libical/libical/Makefile.am
+	* libical/libical/icalrecur.c
+		Fix warnings
+
 2007-10-03 [colin]	1.98.0cvs8
 
 	* src/vcal_manager.c
